--- a/res/values-xlarge-v11/dimens.xml
+++ b/res/values-xlarge-v11/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>    
+    <dimen name="thickbar_height">200dp</dimen>
     <dimen name="text_size_xlarge">32sp</dimen>
     <dimen name="body_padding_medium">10dp</dimen>
     <dimen name="body_padding_large">20dp</dimen>    
