--- a/res/values-xlarge-land-v11/dimens.xml
+++ b/res/values-xlarge-land-v11/dimens.xml
@@ -1,3 +1,4 @@
 <resources>    
     <dimen name="thickbar_height">134dp</dimen>
+    <dimen name="activity_side_padding">56dp</dimen>
 </resources>
