--- a/res/layout/photograph_activity.xml
+++ b/res/layout/photograph_activity.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment android:name="com.articheck.android.PhotographFragment"
+    <fragment android:name="com.articheck.android.fragments.PhotographFragment"
         android:id="@+id/photograph_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
